# eyeblink-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  flake.nix  pyproject.toml
nix/: module.nix  package.nix
src/: cli.py  config.py  dbus_service.py  dbus_settings.py  detector.py  hypr.py  monitor.py  nudge.py  preview.py  session.py  settings.py
tests/: test_smoke.py
